# obfuscateplusplus

./: .gitignore  CMakeLists.txt  README.md  cleartext-demo.cpp  deobfuscator.hpp  file2h.py  obf-demo-optimized.cpp  obf-demo-optimized.hpp  obf-demo.cpp  puzzle.cpp
src/: deobfuscator.hpp  hint.txt  obf-demo-optimized.hpp  obf-demo.cpp  puzzle.cpp
tools/: file2h.py
